--- a/style.css
+++ b/style.css
@@ -2058,6 +2058,10 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
   padding-left: 1rem;
 }
 
+.customizer-content a{
+  color: var(--primary-color);
+}
+
 .contact-section .universal-header{
   text-align: center;
 }
