--- a/style.css
+++ b/style.css
@@ -749,6 +749,10 @@ h6{
   padding: 0;
 }
 
+html, body{
+  scroll-behavior: smooth;
+}
+
 a{
   display: inline-block;
   transition-property: all;
@@ -1081,7 +1085,9 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
   top: 0px !important;
   bottom: 0px !important;
   margin-right: 3rem !important;
-  border-style: none !important
+  border-style: none !important;
+  padding-left: 0px !important;
+  padding-right: 0px !important
 }
 
 .si-search.active input{
@@ -1114,12 +1120,12 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
 
 #si-sidebar{
   top: 120px;
+  height: calc(100vh - 120px);
   visibility: hidden;
   position: fixed;
   left: 0px;
   bottom: 0px;
   z-index: 20;
-  height: 100vh;
   --tw-translate-x: -100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   overflow-y: auto;
@@ -1159,6 +1165,7 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
 
 .header-fixed+#content #si-sidebar{
   top: 77px ;
+  height: calc(100vh - 77px);
 }
 
 #sidebar-main-menu a{
@@ -1317,7 +1324,7 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
 }
 
 .si-main-grid .overlay-post:not(.overlay-post:first-child) img{
-  height: 275px;
+  height: 300px;
 }
 
 .si-main-grid .overlay-post:first-child {
@@ -2554,7 +2561,7 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
 
 #internet-alert{
   z-index: 99999999;
-  color: var(--dark-color);
+  color: var(--white-color);
   background-color: rgba(255, 0, 0, 0.308);
   transition: .3s;
   position: fixed;
@@ -2565,20 +2572,32 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   align-items: center;
-  gap: 0.75rem;
+  gap: 0.25rem;
   border-radius: 9999px;
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-  font-size: 1rem;
-  line-height: 1.5rem;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
+  font-size: 0.75rem;
+  line-height: 1rem;
   --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
   --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   --tw-backdrop-blur: blur(4px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia)
+}
+
+@media (min-width: 768px){
+  #internet-alert{
+    gap: 0.75rem;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
 }
 
 #internet-alert.active{
@@ -2647,6 +2666,24 @@ html.translated-rtl textarea{
 
 html.translated-rtl .wrapper-widget{
   text-align: end;
+}
+
+html.translated-rtl .post-content_footer,html.translated-rtl .post-content_header{
+  justify-content: flex-end;
+}
+
+html.translated-rtl .single-post .single-post-title,html.translated-rtl .single-post .post-axcerpt{
+  text-align: end;
+}
+
+@media (min-width: 640px){
+  html.translated-rtl .single-post .post-content_footer{
+    justify-content: flex-end;
+  }
+}
+
+html.translated-rtl .breadcrumbs .si-wrapper{
+  justify-content: flex-end;
 }
 
 /* Language Switcher */
@@ -2758,6 +2795,10 @@ html.translated-rtl[lang=ur] #announcement font {
 
   .contact-content{
     margin-top: -300px;
+  }
+
+  .si-main-grid .overlay-post:not(.overlay-post:first-child) img{
+    height: 275px;
   }
 }
 
