--- a/tailwind.css
+++ b/tailwind.css
@@ -1077,3 +1077,15 @@ html.translated-rtl[lang=ur] #announcement font {
         width: calc(100% / 5);
     }
 }
+
+@media screen and (max-width: 425px){
+    #announcement{
+        padding-top: 40px;
+    }
+    #gt_float_wrapper {
+        top: 10px;
+        right: unset;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+}
