announcement space top and sidebar width issue

--- a/style.css
+++ b/style.css
@@ -2814,7 +2814,7 @@ html.translated-rtl[lang=ur] #announcement font {
 
 @media screen and (max-width: 425px){
   #announcement{
-    padding-top: 40px;
+    padding-top: 40px !important;
   }
 
   #gt_float_wrapper {
