--- a/tailwind.css
+++ b/tailwind.css
@@ -408,6 +408,7 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
     @apply flex items-center flex-wrap gap-1
 }
 .post-tags{
+    font-size: 0px;
     @apply sm:justify-start justify-center
 }
 .single-post .post-content_footer{
