--- a/style.css
+++ b/style.css
@@ -350,7 +350,7 @@ legend {
 }
 
 ol:not(.customizer-content ol),
-ul:not(.customizer-content ul)
+ul:not(.customizer-content ul),
 menu {
   list-style: none;
   margin: 0;
