--- a/style.css
+++ b/style.css
@@ -2062,7 +2062,7 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.customizer-content ul{
+.customizer-content ul, .customizer-content ol{
   padding-left: 1rem;
 }
 
