--- a/tailwind.css
+++ b/tailwind.css
@@ -582,6 +582,10 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
 .main-post-sidebar .wp-block-latest-posts, .main-post-sidebar .widget_post_views_counter_list_widget{
     @apply w-full m-0
 }
+.main-post-sidebar .wp-block-latest-posts{
+    column-gap: 20px;
+    @apply lg:block sm:grid sm:grid-cols-2;
+}
 .wp-block-latest-posts > li{
     @apply flex items-center justify-between gap-4 relative
 }
@@ -621,6 +625,12 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
 }
 .widget_post_views_counter_list_widget .author, .widget_post_views_counter_list_widget .count{
     @apply w-auto
+}
+.widget_post_views_counter_list_widget ul {
+    @apply grid grid-cols-2 gap-4
+}
+.widget_post_views_counter_list_widget .post-title {
+    @apply text-base
 }
 #single-main-section .post-content_header{
     @apply pb-2
@@ -1042,6 +1052,11 @@ html.translated-rtl[lang="ur"] font {
 html.translated-rtl[lang=ur] #announcement font {
     margin: 0 !important;
 }
+@media screen and (max-width: 1023px) and (min-width: 640px){
+    .wp-block-latest-posts > li:nth-child(2){
+        @apply border-none pt-0
+    }
+}
 @media screen and (max-width: 600px){
     .admin-bar #si-header.header-fixed{
         top: 0 !important;
@@ -1053,6 +1068,9 @@ html.translated-rtl[lang=ur] #announcement font {
 @media screen and (min-width: 425px){
     .si-search.active input{
         width: 300px !important;
+    }
+    .wp-block-latest-posts__post-title{
+        font-size: 18px;
     }
 }
 @media screen and (min-width: 640px){
@@ -1078,6 +1096,12 @@ html.translated-rtl[lang=ur] #announcement font {
     }
     .si-main-grid .overlay-post:not(.overlay-post:first-child) img{
         height: 275px;
+    }
+}
+@media screen and (min-width: 1024px){
+    .wp-block-latest-posts__featured-image img {
+        height: 120px;
+        width: 100%;
     }
 }
 @media screen and (min-width: 1440px){
