--- a/tailwind.css
+++ b/tailwind.css
@@ -789,6 +789,23 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
 .copyright .si-wrapper-content{
     @apply gap-4 justify-center text-center md:text-start md:justify-between
 }
+.next-previous-posts{
+    @apply flex flex-wrap justify-between items-center w-full
+}
+.next-previous-posts > *{
+    max-width: 300px;
+    @apply flex items-center gap-2
+}
+.next-previous-posts img{
+    @apply w-20 h-20 object-cover
+}
+.next-previous-posts .post-title{
+    @apply text-lg mt-0 !important;
+    line-height: 1.2 !important;
+}
+.next-previous-posts span{
+    color: var(--secondary-color);
+}
 .comment-form .form-submit{
     @apply mb-0 !important
 }
