--- a/tailwind.css
+++ b/tailwind.css
@@ -790,17 +790,20 @@ input[type="submit"]:hover, form button:hover, .universal-btn:hover{
     @apply gap-4 justify-center text-center md:text-start md:justify-between
 }
 .next-previous-posts{
-    @apply flex flex-wrap justify-between items-center w-full
+    @apply flex flex-wrap gap-2 justify-between items-center w-full
 }
 .next-previous-posts > *{
     max-width: 300px;
     @apply flex items-center gap-2
 }
+.next-previous-posts > *:last-child{
+    @apply sm:ml-0 ml-auto
+}
 .next-previous-posts img{
     @apply w-32 h-20 object-cover
 }
 .next-previous-posts .post-title{
-    @apply text-lg mt-0 !important;
+    @apply text-base sm:text-lg mt-0 !important;
     line-height: 1.2 !important;
 }
 .next-previous-posts span{
